--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "zen",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/ssr": "^0.0.10",
-    "@supabase/supabase-js": "^2.39.1",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^4.12.0"
-  }
+    "name": "zen",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "prod": "next build && next start"
+    },
+    "dependencies": {
+        "@supabase/auth-helpers-nextjs": "^0.8.7",
+        "@supabase/ssr": "^0.0.10",
+        "@supabase/supabase-js": "^2.39.1",
+        "next": "^14.1.3",
+        "react": "^18",
+        "nextjs-toploader": "^1.6.6",
+        "react-dom": "^18",
+        "@react-icons/all-files": "https://github.com/react-icons/react-icons/releases/download/v5.0.1/react-icons-all-files-5.0.1.tgz"
+    }
 }
